# phatdev-portfolio

./: .gitignore  Cargo.toml  Client.tsx  Event.ts  Markdown.tsx  README.md  System.ts  next.config.js  package-lock.json  package.json  tsconfig.json  wasm-pack.config.js
app/: globals.css  layout.tsx  page.module.css  page.tsx
client/: Client.tsx  HomeComponents.tsx  MainPage.tsx
hooks/: index.ts  useActive.ts  useStyle.ts
public/: class.json  main.xml  root.xml
shaders/: fragment.glsl  vertex.glsl
src/: lib.rs
utils/: engine.ts  object.ts
