[package]
name = "phatdev"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3.67"
wasm-bindgen-futures = "0.4.40"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[package.metadata.wasm-pack.profile.dev]
debug = true

[package.metadata.wasm-pack.profile.release]
debug = false
